--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,9 @@
 Bruno Clermont
 Gilles Fabio
 Jannis Leidel
+John Franey
 Marc Abramowitz
 Michael van Tellingen
 Mike Fogel
+Paolo Melchiorre
 Peter Bittner
