Add new AUTHORS since 2.2 release
Got this from "git shortlog -s 2.2..master".

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,9 +1,22 @@
+Arseny Sokolov
+Asif Saif Uddin
+Baptiste Mispelon
+Brian Helba
 Bruno Clermont
+Christoph Krybus
+Finn-Thorben Sell
 Gilles Fabio
 Jannis Leidel
 John Franey
 Marc Abramowitz
+Michael Käufl
 Michael van Tellingen
 Mike Fogel
+Miro Hrončok
+Nicholas Dujay
 Paolo Melchiorre
 Peter Bittner
+Richard de Wit
+Thomas Grainger
+Tim Gates
+Victor Seva
